<resources>
    <string name="app_name">HarryPotterBooksApp</string>
    <string name="harry_potter">HARRY POTTER</string>
    <string name="bookstore">BOOKSTORE</string>
    <string name="add_to_cart">add to cart</string>
    <string name="harrypotter_book_1">harrypotter book 1</string>
    <string name="harrypotter_book_2">harrypotter book 2</string>
    <string name="totalAfterDiscoutView">"Total: $ %.2f"</string>
    <string name="discountAmount">Discount: $ %.2f</string>
    <string name="subtotalBeforeDiscount">Subtotal: $ %.2f</string>
    <string name="apply_discounts_button">Apply Discounts</string>
    <string name="new_title">HARRY POTTER BOOKSTORE</string>
    <string name="book_1_reciept_view">Book One - Quantity: %d</string>
    <string name="book_2_reciept_view">Book Two - Quantity: %1$d</string>
    <string name="book_3_reciept_view">Book Three - Quantity: %1$d</string>
    <string name="book_4_reciept_view">Book Four - Quantity: %1$d</string>
    <string name="book_5_reciept_view">Book Five - Quantity : %1$d</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cart_placeholder">CART PLACEHOLDER</string>
    <string name="string_cart_placeholder" />
    <string name="cart">CART</string>
    <string name="Add">+</string>
    <string name="add">+</string>
    <string name="add_a_book">+</string>
</resources>